[feat]: Add toggle functionality and generate random colors

--- a/01-color-flipper/index.html
+++ b/01-color-flipper/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="navbar">
         <div class="nav-buttons">
-            <div class="nav-btn">Color Flipper</div>
-            <div class="nav-btn">Simple Hex</div>
+            <div class="nav-btn color-flipper">Color Flipper</div>
+            <div class="nav-btn hex-flipper">Simple Hex</div>
         </div>
     </div>
     <div class="container">
