[feat]: Create base HTML structure

--- a/03-review-carousel/index.html
+++ b/03-review-carousel/index.html
@@ -8,5 +8,24 @@
 </head>
 <body>
     <script src="app.js"></script>
+    <div class="container">
+        <div class="modal-box">
+            <div class="modal-title">Our Reviews</div>
+            <div class="modal-cart">
+                <div class="person-img">
+                    <img src="person-1.jpeg" alt="person photo">
+                   <!-- <div class="quote">"</div>-->
+                </div>
+                <div class="person-name">Susan Smith</div>
+                <div class="person-job">Web Developer</div>
+                <div class="person-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit possimus eius ut minima quod voluptatum sunt hic beatae, alias architecto consequuntur, velit delectus sint! Nesciunt delectus illum molestias voluptates officia?</div>
+                <div class="buttons">
+                    <button class="left">Left</button>
+                    <button class="right">Right</button>
+                </div>
+                <button class="suprise-btn">Suprise me</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
