[refactor]: Change more meaningful names some classes

--- a/03-review-carousel/index.html
+++ b/03-review-carousel/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="app.js"></script>
     <div class="container">
         <div class="modal-box">
             <div class="modal-title">Our Reviews</div>
@@ -20,12 +19,14 @@
                 <div class="person-job">Web Developer</div>
                 <div class="person-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit possimus eius ut minima quod voluptatum sunt hic beatae, alias architecto consequuntur, velit delectus sint! Nesciunt delectus illum molestias voluptates officia?</div>
                 <div class="buttons">
-                    <button class="left">Left</button>
-                    <button class="right">Right</button>
+                    <button class="prev">Previous</button>
+                    <button class="next">Next</button>
                 </div>
                 <button class="suprise-btn">Suprise me</button>
             </div>
         </div>
     </div>
+    <script src="app.js"></script>
+
 </body>
 </html>
