--- a/04-navbar/index.html
+++ b/04-navbar/index.html
@@ -5,10 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Navbar</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <nav>
-        
+        <div class="nav-img">
+            <img src="logo.svg" alt="coding_addict">
+        </div>
+        <div class="nav-main">
+            <div class="home">Home</div>
+            <div class="about">About</div>
+            <div class="projects">Projects</div>
+            <div class="contact">Contact</div>
+        </div>
+        <div class="social-media-group">
+            <i class="fa fa-facebook"></i>
+            <i  class="fa fa-twitter"></i >
+            <i  class="fa fa-linkedin"></i >
+        </div>
     </nav>
     <script src="app.js"></script>
 </body>
