[refactor]: Change sub list structure

--- a/04-navbar/index.html
+++ b/04-navbar/index.html
@@ -18,12 +18,22 @@
             <div class="projects">Projects</div>
             <div class="contact">Contact</div>
         </div>
+    
         <div class="social-media-group">
             <i class="fa fa-facebook"></i>
             <i  class="fa fa-twitter"></i >
             <i  class="fa fa-linkedin"></i >
         </div>
+        <button class="hamburger hide">
+            Hamburger Brothar 
+        </button>
     </nav>
+    <ul class="list-style hide">
+        <li>Home</li>
+        <li>About</li>
+        <li>Projects</li>
+        <li>Contact</li>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
