--- a/05-modal/index.html
+++ b/05-modal/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="box">
+        <h1>Modal Project</h1>
+        <button class="open">Open Modal</button>
+    </div>
+    <div class="modal-container">
+        <div class="modal">
+            <h1>Modal Lifestyle</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident voluptate, mollitia odio possimus
+                 in nemo ipsum distinctio vel iusto praesentium esse aspernatur dicta omnis cum quibusdam dolore rerum minus deleniti!</p>
+            <button class="close">Close Me</button>
+        </div>
+    </div>
+
+
     <script src="app.js"></script>
 </body>
 </html>
