--- a/05-modal/index.html
+++ b/05-modal/index.html
@@ -11,7 +11,7 @@
         <h1>Modal Project</h1>
         <button class="open">Open Modal</button>
     </div>
-    <div class="modal-container">
+    <div class="modal-container hide">
         <div class="modal">
             <h1>Modal Lifestyle</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident voluptate, mollitia odio possimus
