[feat]: Create base HTML structure

--- a/06-display-different-content/index.html
+++ b/06-display-different-content/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Different Content</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <h1 class="about">About</h1>
+        <div class="lorem"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nam molestiae, iste!
+        </div>
+        <div class="content-box">
+            <img src="" alt="content image" class="content-img">
+            <div class="main-content">
+                <div class="content-tabs">
+                    <div class="tab">History</div>
+                    <div class="tab">Vision</div>
+                    <div class="tab">Goals</div>
+                </div>
+                <div class="content-text">
+                    <h3>History</h3>
+                    II. Dünya Savaşı, 1939'dan 1945'e kadar süren küresel savaştır. Savaşa dönemin büyük güçleri ve
+                    dünya ülkelerinin büyük çoğunluğu katıldı, Müttefikler ve Mihver olmak üzere iki karşıt askerî
+                    ittifak kuruldu. 30'dan fazla ülkeden gelen 100 milyondan fazla personelin doğrudan katıldığı bu
+                    topyekûn savaşta, savaşın büyük tarafları tüm ekonomik, endüstriyel ve bilimsel kapasitelerini savaş
+                    için seferber ettiler. 70 ila 85 milyon ölümle sonuçlanan II. Dünya Savaşı, insanlık tarihindeki en
+                    ölümcül savaştı ve savaş boyunca askerî personelden daha çok sivil kayıp verildi. Milyonlarca insan
+                    soykırımdan (Holokost gibi), planlanmış açlık ölümlerinden, katliamlardan ve hastalıklardan öldü.
+                    Tanklar, zırhlı araçlar, savaş uçakları, stratejik bombardımanlar, uçak gemileri, radar ve sonar,
+                    nükleer silahların geliştirilmesi ve roketler gibi birçok savaş teknolojisi savaşta önemli rol
+                    oynadı.
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
+
 </html>
