--- a/06-display-different-content/index.html
+++ b/06-display-different-content/index.html
@@ -14,7 +14,7 @@
         <div class="lorem"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nam molestiae, iste!
         </div>
         <div class="content-box">
-            <img src="" alt="content image" class="content-img">
+            <img src="hero-bcg.jpeg" alt="content image" class="content-img">
             <div class="main-content">
                 <div class="content-tabs">
                     <div class="tab">History</div>
@@ -22,8 +22,8 @@
                     <div class="tab">Goals</div>
                 </div>
                 <div class="content-text">
-                    <h3>History</h3>
-                    II. Dünya Savaşı, 1939'dan 1945'e kadar süren küresel savaştır. Savaşa dönemin büyük güçleri ve
+                    <h1>History</h1>
+                    <div class="text">II. Dünya Savaşı, 1939'dan 1945'e kadar süren küresel savaştır. Savaşa dönemin büyük güçleri ve
                     dünya ülkelerinin büyük çoğunluğu katıldı, Müttefikler ve Mihver olmak üzere iki karşıt askerî
                     ittifak kuruldu. 30'dan fazla ülkeden gelen 100 milyondan fazla personelin doğrudan katıldığı bu
                     topyekûn savaşta, savaşın büyük tarafları tüm ekonomik, endüstriyel ve bilimsel kapasitelerini savaş
@@ -32,7 +32,7 @@
                     soykırımdan (Holokost gibi), planlanmış açlık ölümlerinden, katliamlardan ve hastalıklardan öldü.
                     Tanklar, zırhlı araçlar, savaş uçakları, stratejik bombardımanlar, uçak gemileri, radar ve sonar,
                     nükleer silahların geliştirilmesi ve roketler gibi birçok savaş teknolojisi savaşta önemli rol
-                    oynadı.
+                    oynadı.</div>
                 </div>
             </div>
         </div>
