[refactor]: Add active class for testing

--- a/06-display-different-content/index.html
+++ b/06-display-different-content/index.html
@@ -17,9 +17,9 @@
             <img src="hero-bcg.jpeg" alt="content image" class="content-img">
             <div class="main-content">
                 <div class="content-tabs">
-                    <div class="tab">History</div>
-                    <div class="tab">Vision</div>
-                    <div class="tab">Goals</div>
+                    <div class="tab active" id="history">History</div>
+                    <div class="tab" id="vision">Vision</div>
+                    <div class="tab" id="goals">Goals</div>
                 </div>
                 <div class="content-text">
                     <h1>History</h1>
